[package]
name = "test0"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
log = "0.4"
env_logger = "0.10"

[dependencies.uuid]
version = "1.16.0"
features = ["v4"]

[dev-dependencies]
actix-rt = "2.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
